--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,16 @@
 .button-log:hover{
   opacity: .7;
 }
+
+.body-log{
+  /*background: #1690A7;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
 .error {
    background: #F2DEDE;
    color: #A94442;
@@ -82,4 +92,9 @@
    width: 95%;
    border-radius: 5px;
    margin: 20px auto;
+}
+
+.title-log{
+  text-align: center;
+  margin-bottom: 40px;
 }
